[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-web = "4.3"
actix-web-actors = "4.2"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.15"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }